--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="f:/Github site/AJ1767005.github.io/CSS/styles.css">
+<link rel="stylesheet" href="CSS/styles.css">
 <body>
 <h1>Resident Evil</h1>
 <p> Good Game </p>
