--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
 <link rel="stylesheet" href="CSS/styles.css">
+</head>
 <body>
 <h1>Resident Evil</h1>
-<p> Good Game </p>
+<ul>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="game.html">Game</a></li>
+  <li><a href="trailer.html">Trailer</a></li>
+</ul>
+
+<p> </p>
+
 </body>
 </html>
+
