--- a/trailer.html
+++ b/trailer.html
@@ -4,15 +4,18 @@
 <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-<h1>Resident Evil</h1>
+<img src="assets/LOGO.png" id="title">
 <ul>
   <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="game.html">Game</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="game.html">Design A Monster</a></li>
   <li><a href="trailer.html">Trailer</a></li>
+  <li><a href="demo.html">demo</a></li>
 </ul>
+<iframe width="641" height="360" src="https://www.youtube.com/embed/9YetHMnhnhM"  allowfullscreen></iframe>
 
-<p> </p>
 
 </body>
 </html>
+
 
